# axum_microservice_template

./: .gitignore  Cargo.toml  README.md
migrations/: 20230523194433_Create_task_table_and_example_entries.down.sql  20230523194433_Create_task_table_and_example_entries.up.sql
src/: README.md  errors.rs  main.rs  tasks.rs
src/tasks/: controller.rs  model.rs
