[package]
name = "axum_microservice_template"
version = "0.1.0"
authors = ["Brian Bustin"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tower-http = { version = "0.4.0", features = ["trace"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "json", "sqlite"] }
dotenvy = "0.15.7"
anyhow = "1.0.71"
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }